--- a/proj1.html
+++ b/proj1.html
@@ -24,17 +24,11 @@
             <input type="time" placeholder="when?" id="time" style="background-image: url(assets/form.jpg);" required>
             <input type="button" onclick="dataTask()" id="btn" value="ADD TASK"
                 style="background-image: url(assets/form.jpg);">
-        </form>
+        </form> <br>
+        <button onclick="clearAll()">clear all tasks</button>
         <div id="taskNote" class="task-note"></div>
     </div> <br>
-    <!-- <div id="tasklist" class="hidden">
-        <img src="assets/notebg.png" alt="image">
-        <p>kkkk</p>
-    </div> -->
     <div class="container" id="container"></div>
-    <!-- <section>
-        <div id="wrapper" class="wrapper"></div>
-    </section> -->
 </body>
 
 </html>
